<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="play_services_update_cancelled">Play Services update cancelled</string>
    <string name="developer_error">Developer error</string>
    <string name="provider_error">Provider error</string>
    <string name="user_account_merge_conflict">User account merge conflict</string>
    <string name="attempting_to_sign_in_different_email">You are attempting to sign in a different email than previously provided</string>
    <string name="attempting_to_sign_with_an_invalid_email_link">You are attempting to sign in with an invalid email link</string>
    <string name="please_enter_your_email_to_continue_signing_in">Please enter your email to continue signing in</string>
    <string name="you_must_open_the_email_link_on_the_same_device">You must open the email link on the same device.</string>
    <string name="you_must_determine_if_you_want_continue_linking_or_complete_the_sign_in">You must determine if you want to continue linking or complete the sign in</string>
    <string name="the_session_associated_with_this_sign_in_request_has_either_expired_or_was_cleared">The session associated with this sign-in request has either expired or was cleared</string>
    <string name="the_user_account_has_been_disabled_by_an_administrator">The user account has been disabled by an administrator.</string>
    <string name="generic_idp_recoverable_error">Generic IDP recoverable error.</string>
    <string name="unknown_code">Unknown code: </string>

    <string name="hint">Search by address</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>


    <string-array name="add_numberOfRooms_property">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="months_since_sold">
        <item>24</item>
        <item>12</item>
        <item>6</item>
        <item>3</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="SoldBy">"Sold by "</string>
    <string name="AddedBy">"Added by "</string>
    <string name="Media">Media</string>
    <string name="Description">Description</string>
    <string name="Surface">Surface</string>
    <string name="NumberOfRooms">Number of rooms</string>
    <string name="NumberOfBathrooms">Number of bathrooms</string>
    <string name="NumberOfBedrooms">Number of bedrooms</string>
    <string name="CloseTo">\Close to: \</string>
    <string name="Location">Location</string>
    <string name="squareMeter">\ m²\</string>
    <string name="house_duplex">House, Duplex…</string>
    <string name="photo_s_url">Photo\'s URL</string>
    <string name="description">Description</string>
    <string name="number_of_rooms">Number of Rooms:</string>
    <string name="number_of_bathrooms">Number of BathRooms:</string>
    <string name="number_of_bedrooms">Number of BedRooms:</string>
    <string name="city">City</string>
    <string name="surface">Surface</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="close_to_shops">Close to Shops</string>
    <string name="close_to_schools">Close to Schools</string>
    <string name="close_to_parc">Close to Parc</string>
    <string name="save_modification">Save Modification</string>
    <string name="imageview_add_property">imageview_add_property</string>
    <string name="voici_la_valeur_d_un_bien">Voici la valeur d\'un bien :</string>
    <string name="_0">0</string>
    <string name="ma_super_activit_num_ro_2">Ma super activité numéro 2</string>
    <string name="real_estate_salesman">Real Estate Salesman:</string>
    <string name="name_of_agent">Name of Agent</string>
    <string name="sale_day">Sale Day</string>
    <string name="submit">Submit</string>
    <string name="creation_day">Creation Day</string>
    <string name="save">Save</string>
    <string name="room">Room</string>
    <string name="house">House</string>
    <string name="paris">Paris</string>
    <string name="_300_000">300 000 €</string>
    <string name="sold_during_last">Sold during last</string>
    <string name="months">Months</string>
    <string name="recently_put_on_the_market">Recently put on the market</string>
    <string name="more_than">More than</string>
    <string name="photo_s">Photo(s)</string>
    <string name="url_photo">URL Photo</string>
    <string name="write_the_type">Write the Type</string>
    <string name="number_of_rooms_">Number of Rooms:</string>
    <string name="number_of_bathrooms_">Number of BathRooms:</string>
    <string name="number_of_bedrooms_">Number of BedRooms:</string>


</resources>
