<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/background_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/checkBox_sold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:text="@string/sold_during_last"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/month_spinner_dialog"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/corner_spinner"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/checkBox_sold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="7dp"
        android:text="@string/months"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/month_spinner_dialog"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:text="@string/recently_put_on_the_market"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_sold" />

    <CheckBox
        android:id="@+id/checkBox_close_to_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:text="@string/close_to_schools"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_new" />

    <CheckBox
        android:id="@+id/checkBox_close_to_shops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:text="@string/close_to_shops"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_close_to_school" />

    <CheckBox
        android:id="@+id/checkBox_close_to_parc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:text="@string/close_to_parc"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_close_to_shops" />

    <CheckBox
        android:id="@+id/checkBox_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:text="@string/more_than"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_close_to_parc" />

    <Spinner
        android:id="@+id/photo_spinner_dialog"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/corner_spinner"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/checkBox_photo"
        app:layout_constraintTop_toBottomOf="@id/checkBox_close_to_parc" />

    <TextView
        android:id="@+id/photo_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/photo_s"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/photo_spinner_dialog"
        app:layout_constraintTop_toBottomOf="@id/checkBox_close_to_parc" />

    <CheckBox
        android:id="@+id/checkBox_surface"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:padding="7dp"
        android:text="@string/surface"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_photo" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangerSlider_surface"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        android:valueFrom="10"
        android:valueTo="500"
        android:stepSize="10"
        app:values="@array/initial_slider_surface_values"
        app:layout_constraintStart_toEndOf="@id/checkBox_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_photo"/>

    <CheckBox
        android:id="@+id/checkBox_price"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:text="@string/price"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_surface" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangerSlider_price"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        android:valueFrom="50000"
        android:valueTo="500000"
        android:stepSize="50000"
        app:values="@array/initial_slider_price_values"
        app:layout_constraintStart_toEndOf="@id/checkBox_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox_surface"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner_spinner"
        android:enabled="true"
        android:text="@string/cancel"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submit"
        app:layout_constraintTop_toBottomOf="@id/rangerSlider_price" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner_spinner"
        android:enabled="true"
        android:text="@string/submit"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rangerSlider_price" />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>